--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon .",
-    "compile": "tsc",
+    "compile": "tsc -w",
     "postinstall": "tsc -p ."
   },
   "dependencies": {
